# BFFM-BCI

./: .gitignore  .gitmodules  README  pyproject.toml
data/: eeg_sequence.py  empirical.py  extract_subsequences.py
initialization/: wfa.py
models/bffmbci/: bffm.py  bffm_init.py
models/bffmbci/utils/: __init__.py  truncated_gaussian.py
models/bffmbci/variables/: __init__.py  gaussian_process.py  loadings.py  observation_variance.py  observations.py  plate.py  (+4 more)
models/dwps/: dwps.py
results/: mcmc_multiple.py  mcmc_results.py
scratches/: chain.py  factors.py  fit.py  initialization.py  initialization_tests.py  main.py  model.py  plot_network.py  predict_loo.py  subject_ml.py  subjects.py  swlda.py  trunc_norm_sampling.py  truncated_gaussian.py  wrong_start.py  xdawn.py
source/: .gitignore  README
source/bffmbci/: __init__.py  bffm.py  bffm_init.py  bffm_map.py  bffm_predict.py  bffm_results.py
source/data/: k_protocol.py
source/eegnet/: eegnet.py  eegnet_keras.py
source/initialization/: varimax.py  wfa.py
source/nb_mn/: __init__.py  matrix_normal.py  naive_bayes.py
source/results/: metrics.py
source/swlda/: stepwise.py  swlda.py
src/bffmbci/: __init__.py  bffm.py  bffm_init.py  bffm_predict.py
src/data/: k_protocol.py
src/initialization/: wfa.py
src/results/: __init__.py  mcmc_multiple.py  mcmc_results.py
src/results_old/: __init__.py  mcmc_multiple.py  mcmc_results.py
src/xdawn/: xdawn.py
synthetic_data/: latent_factor.py  latent_processes.py  observation_model.py  process_superpostion.py  sequence_metadata.py  wishart_process.py
(+33 files in other folders)
