[tool.poetry]
name = "bci"
version = "0.1.0"
description = "tbd"
authors = ["fontaine618 <simfont@umich.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.2"
scipy = "^1.10.0"
arviz = "^0.15.0"
pypet = "^0.6.1"
seaborn = "^0.12.2"
torch = "^2.0.0"
mne = "^1.5.0"
scikit-learn = "^1.3.0"
tensorflow = "2.15.0"
torchmetrics = "^1.3.1"
xgboost = "^2.0.3"
arspy = "^0.4"
statsmodels = "^0.14.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
